--- a/backend/frontend/src/components/table.css
+++ b/backend/frontend/src/components/table.css
@@ -11,24 +11,25 @@ table {
   
   table tr:nth-child(even){background-color: #f2f2f2;}
   
-  table tr:hover {background-color: rgb(137, 245, 146);}
+  table tr:hover {background-color: rgb(243, 242, 164);}
   
   table th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
-    background-color: #04AA6D;
+    background-color: #000000;
     color: white;
   }
   .button {
-    background-color: #4CAF50;
+    background-color: #0c86b6;
     
-    border: 2px solid #4CAF50;
+    border: 2px solid #070707;
     
     border-radius: 8px;
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 70px 70px;
     text-align: center;
+    
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
@@ -36,10 +37,10 @@ table {
     cursor: pointer;
   }
   .button1 {
-    background-color: #4CAF50; /* Green */
+    background-color: #000000; /* Green */
     border: none;
     border-radius: 8px;
-    color: white;
+    color: rgb(252, 249, 249);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
